--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "axios": "^0.15.3",
+    "cors": "^2.8.1",
+    "express": "^4.15.2",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.4.0"
